--- a/.github/workflows/test_and_merge.yml
+++ b/.github/workflows/test_and_merge.yml
@@ -20,6 +20,10 @@ jobs:
             python -m pip install --upgrade pip
             python -m pip install pytest pytest-xdist
 
+        - name: Install testing dependencies.
+          run: |
+            - python -m pip install -r requirements.txt
+
         - name: Run unit-tests.
           run: |
             python -m pytest
