--- a/.github/workflows/test_and_merge.yml
+++ b/.github/workflows/test_and_merge.yml
@@ -22,7 +22,7 @@ jobs:
 
         - name: Install testing dependencies.
           run: |
-            - python -m pip install -r requirements.txt
+            python -m pip install -r requirements.txt
 
         - name: Run unit-tests.
           run: |
