--- a/action.yml
+++ b/action.yml
@@ -21,4 +21,4 @@ runs:
     - name: Call script to read Cargo.toml.
       id: get-version
       shell: bash
-      run: echo "::set-output name=version::$( ${{ github.action_path }}/rust_app_version/get_version.py )"
+      run: echo "::set-output name=version::$( ${{ github.action_path }}/rust_app_version/get_version.py --cargo_toml_folder ${{ inputs.cargo_toml_folder }} )"
