--- a/action.yml
+++ b/action.yml
@@ -24,4 +24,4 @@ runs:
       run: |
         retrieved_version=$( ${{ github.action_path }}/rust_app_version/get_version.py --cargo_toml_folder ${{ inputs.cargo_toml_folder }} )
         echo "Version got from Cargo.toml: $retrieved_version"
-        echo "version=$retrieved_version" >> GITHUB_OUTPUT
+        echo "version=$retrieved_version" >> $GITHUB_OUTPUT
